--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,19 +30,21 @@
         app:layout_constraintVertical_bias="0.07999998" />
 
     <EditText
+        android:gravity="center_horizontal"
         android:id="@+id/et_input"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.114" />
+        app:layout_constraintVertical_bias="0.114"
+        android:inputType="number"/>
 
     <TextView
         android:gravity="center_horizontal"
         android:id="@+id/tv_output"
-        android:layout_width="100dp"
+        android:layout_width="300dp"
         android:layout_height="40dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cek!!"
+        android:enabled="false"
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/tv_output"
         app:layout_constraintEnd_toEndOf="parent"
